--- a/index.html
+++ b/index.html
@@ -12,59 +12,14 @@
  
  
 }
-#content-1 {
-    float:left;
-    width:400px;
-    padding-left:10px;
-    background: white;
-    text-align: center;
-    padding-left: .5em;
-    margin: 1em;
-    padding-bottom: .5em;
-    padding-right: .5em;
-    background-color: white ;
-     border-style: inset;
-     border-radius: .5em;
 
-}
-#content-2-1 {
-    float:left;
-    width:400px;
-    padding-left:10px;
-    background: white;
-    text-align: center;
-    padding-left: .5em;
-    margin: 1em;
-    padding-bottom: .5em;
-    padding-right: .5em;
-    background-color: white  ;
-    border-style: inset;
-    border-radius: .5em;
-}
-#content-2-2 {
-    float:left;
-    width:400px;
-    padding-left:10px;
-    background: white;
-    text-align: center;
-    padding-left: .5em;
-    margin: 1em;
-    padding-bottom: .5em;
-    padding-right: .5em;
-    background-color: white  ;
-     border-style: inset;
-     border-radius: .5em;
-
-}
 body {
 	color: black;
+	padding-left: 2em;
+	background-color: #cccccc;
 	text-align: center;
 	display: inline-block;
 	padding-left: 2em;
-	background-image: url("");
-	background-color: #cccccc;
-}
-
 }
 </style>
 </head>
@@ -74,17 +29,20 @@ body {
 		<h1>Katie Daubert</h1>
 	</div>
 </div>
-	<div id="content-1" >
-		<a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/websiteabout.html"><font color="000000"><h1><b>About Katie</b></h1></font>
+	<div id="content-4" >
+		<a href="websiteabout.html"><font color="000000"><h1><b>About Katie</b></h1></font>
 		<img src="aboutme.jpg" alt="HTML5 Icon" width="370" height="350"></a></a>
+		<p>Who am I?</p>
 	</div>
-	<div id="content-2-1" >
-	<a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/websiteblog.html"><font color="000000"><h1><b>Blog</b></h1></font>
+	<div id="content-5-1" >
+	<a href="websiteblog.html"><font color="000000"><h1><b>Blog</b></h1></font>
 		<img src="IMG_5803.JPG" alt="HTML5 Icon" width="370" height="350"></a>
+		<p>What am I up to?</p>
 	</div>
-	<div id="content-2-2" >
-	<a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/websiteprojects.html"><font color="000000"><h1><b>Projects</b></h1></font>
-		<img src="projects.png" alt="HTML5 Icon" width="350" height="350"></a>
+	<div id="content-5-2" >
+	<a href="websiteprojects.html"><font color="000000"><h1><b>Projects</b></h1></font>
+		<img src="projects.png" alt="HTML5 Icon" width="370" height="350"></a>
+		<p>What have I accomplished?</p>
 	</div>
 </div>
 
