--- a/websiteabout.html
+++ b/websiteabout.html
@@ -10,108 +10,22 @@
 
 #mainContent {
 
-}
-
-#tabContainer {
-  width: 35%;
-  padding-left: 3em;
-  padding-bottom: .5em;
-  text-align: center;
-  margin-left: 30%;
-  border-style: inherit;
-  
-}
-
-#tabContainer a {
- display: inline-block;
- width: 20%;
- background-color: white;
- color: DarkSlateBlue;
- text-decoration: bold;
- border-radius: 60%;
- margin: 1%;
- padding: 2%;
- text-align: center;
-}
-
-#tabContainer a:hover {
- color: white;
  
 }
-#content-1 {
-    float:left;
-    width:400px;
-    padding-left:10px;
-    background: white;
-    border-radius: 1em;
-    text-align: center;
-    padding-left: 1em;
-    margin: 1em;
-    padding-right: 10px;
-    padding-top:1em;
-    padding-bottom: .5em;
 
-}
-#content-2-1 {
-    float:left;
-    width:800px;
-    padding-left:10px;
-    background: white;
-    border-radius: 1em;
-    text-align: center;
-    padding-left: 1em;
-    margin: 1em;
-    padding-bottom: 1em;
-    padding-right: 10px;
-    padding-top: 1em;
-
-}
 
 #Information {
 }
 
-#testDiv1 {
-  width: 400px;
-  font-size: 1em;
-  margin: 1.5em;
-  float: left;
-  background-color: white;
-  text-align: left;
-  padding-left: .5em;
-  border-radius: 1em;
-  
-}
-#testDiv2 {
-  width: 400px;
-  font-size: 1em;
-  margin: 1.5em;
-  float: left;
-  background-color: white;
-  text-align: left;
-  padding-left: .5em;
-  border-radius: 1em;
 
-}
-#testDiv3 {
-  width: 400px;
-  font-size: 1em;
-  margin: 1.5em;
-  float: right;
-  background-color: white;
-  text-align: left;
-  padding-left: .5em;
-  border-radius: 1em;
- 
-	
-}
 body {
 	background-color:LightSlateGray  ;
 	color: black;
 	text-align: center;
-	display: inline-block;
 	padding-left: 2em;
-	background-image: url("");
 	background-color: #cccccc;
+	display: inline-block;
+
 }
 }
 </style>
@@ -125,20 +39,17 @@ body {
 </div>
 <div id="exercise1" class="exercise">
 	<div id="tabContainer">
-		<a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/index.html">Home</a><a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/websiteblog.html">Blog</a><a href="file://localhost/Users/katiedaubert/Documents/Github/KatieWebsite/websiteprojects.html">Projects</a>
+		<p><a href="index.html">Home</a><a href="websiteblog.html">Blog</a><a href="websiteprojects.html">Projects</a></p>
 	</div>
 </div>
 	<div id="content-1" >
-		<img src="aboutme.jpg" alt="HTML5 Icon" width="270" height="250"></a>
+		<p>Hey there! My name is Katie Daubert.</p>
+		<p>While growing up in central Pennsylvania, my family always described me as "the kid who leave home to take on the big city". And following my graduation from high school, I did just that. My last four years here in Philadelphia have allowed me to reach out of my comfort zone and experience exciting and beautiful moments in my life that I would have never dreamed of. I was able to indulge in my passions for writing, reading, traveling, and music while also attending a fantastic university.</p> 
+		<p>Although I loved every English and Religous Studies class I took for my majors, my dream job lies somewhere within the music industry. Over the years I've taught myself and developed digital marketing and strategy skills that have allowed me to be involved with some of the world's biggest music festivals and artists. I'm now searching to utilize these skills and my passion for music to support the artists and music events that I love most. I take great pride in what I've learned through my hands-on experience, and I hope that my skills, determination, and passion for music can be recognized and utilized.</p>
 	</div>
 	<div id="content-2-1" >
-		<p>This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.</p>
+		
+		<p><img src="aboutme.jpg" alt="HTML5 Icon" width="255" height="230"></a></p>
 	</div>
 	
 </div>
@@ -169,32 +80,32 @@ You can use the firefox inspector to get a better sense of how the size and posi
    <h2><center>Leadership Experience</center></h2>
     <p><b><i>Founder, </i>Phi Sigma Sigma, Saint Joseph's University</b><p>
 	<ul>
-		<li>Installed the Iota Rho Chapter at Saint Joseph’s University</li>
+		<li>Installed the Iota Rho Chapter at Saint Joseph's University</li>
 		<li>Developed Chapter administration and management</li>
 	</ul>
  <p><b><i>Brand Ambassador, </i>Life in Color</b></p>
  	<ul>
 		<li>Promoted on social networks for festivals and events such as TomorrowWorld, Mysteryland USA, and Spring Awakening Music Festival</li>	
 	</ul>
-	<p><b><i>Summer Scholar, </i>Saint Joseph’s University English Department</b></p>
+	<p><b><i>Summer Scholar, </i>Saint Joseph's University English Department</b></p>
  	<ul>
 		<li>Assisted in scholarly work under the SJU English Department Chair with an online virtual archive of marked and annotated books from the library of American author Herman Melville</li>
 	</ul>
- <p><b><i>Special Events Committee Member, </i>Phi Sigma Pi National Honors Fraternity, Saint Joseph’s University</b></p>
+ <p><b><i>Special Events Committee Member, </i>Phi Sigma Pi National Honors Fraternity, Saint Joseph's University</b></p>
  	<ul>
 		<li>Planned and coordinated fraternity events including formals, date nights, and risk management events</li>
 	</ul>
    </div>
     <div id="testDiv3">
     <h2><center>Other Skills and Activities</center></h2>
-    <p><b>Awards and Achievements: </b>Dean’s List, Academic Achievement Award, Summer Scholars<p>
+    <p><b>Awards and Achievements: </b>Dean's List, Academic Achievement Award, Summer Scholars<p>
     <p><b>Computer Skills: </b>HTML, CSS, Adobe Creative Pro, Photoshop, social media, Microsoft Office<p>
     <p><b>Activities: </b><p>
     <ul>
-	<li>Hawk Newspaper – Arts and Entertainment co-writer for SJU’s primary news outlet (Sept 2011-Present)</li>
-	<li>SJU Writers’ Block Group – Created and presided over the official writing group of SJU (Sept 2012-May 2013)</li>
-	<li>SJU Women’s Rugby – played on D2 team in Mid Atlantic Rugby Conference (Sept 2013-Nov 2014)</li>
-	<li>Steez Promo – Social media and street promotion for Steez events such as Moonrise Festival (Aug 2014-Present)</li>
+	<li>Hawk Newspaper - Arts and Entertainment co-writer for SJU's primary news outlet (Sept 2011-Present)</li>
+	<li>SJU Writers' Block Group - Created and presided over the official writing group of SJU (Sept 2012-May 2013)</li>
+	<li>SJU Women's Rugby - played on D2 team in Mid Atlantic Rugby Conference (Sept 2013-Nov 2014)</li>
+	<li>Steez Promo - Social media and street promotion for Steez events such as Moonrise Festival (Aug 2014-Present)</li>
 	</ul>
    </div>
 </div>
