--- a/websiteabout.html
+++ b/websiteabout.html
@@ -36,22 +36,11 @@ body {
 	
 		<h1>Who is Katie?</h1>
 	</div>
-</div>
+	</div>
 <div id="exercise1" class="exercise">
 	<div id="tabContainer">
-		<p><a href="index.html">Home</a><a href="websiteblog.html">Blog</a><a href="websiteprojects.html">Projects</a></p>
+		<a href="index.html">Home</a><a href="websiteblog.html">Blog</a><a href="websiteprojects.html">Projects</a>
 	</div>
-</div>
-	<div id="content-1" >
-		<p>Hey there! My name is Katie Daubert.</p>
-		<p>While growing up in central Pennsylvania, my family always described me as "the kid who leave home to take on the big city". And following my graduation from high school, I did just that. My last four years here in Philadelphia have allowed me to reach out of my comfort zone and experience exciting and beautiful moments in my life that I would have never dreamed of. I was able to indulge in my passions for writing, reading, traveling, and music while also attending a fantastic university.</p> 
-		<p>Although I loved every English and Religous Studies class I took for my majors, my dream job lies somewhere within the music industry. Over the years I've taught myself and developed digital marketing and strategy skills that have allowed me to be involved with some of the world's biggest music festivals and artists. I'm now searching to utilize these skills and my passion for music to support the artists and music events that I love most. I take great pride in what I've learned through my hands-on experience, and I hope that my skills, determination, and passion for music can be recognized and utilized.</p>
-	</div>
-	<div id="content-2-1" >
-		
-		<p><img src="aboutme.jpg" alt="HTML5 Icon" width="255" height="230"></a></p>
-	</div>
-	
 </div>
 <div id="Information">
    <div id="testDiv1">
