--- a/websiteblog.html
+++ b/websiteblog.html
@@ -40,13 +40,7 @@ body {
 		<img src="aboutme.jpg" alt="HTML5 Icon" width="270" height="250"></a>
 	</div>
 	<div id="content-4-1" >
-		<p>This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.This is testDiv1. It wants to be a column. It has dreamed up being a column it's whole life. We can make that dream happen. Then we can dash it horribly, then we can make it happen again. It will be an emotional roller coaster for the div, but we will learn a lot along the way.
-
-You can use the firefox inspector to get a better sense of how the size and position of the divs are changing as the settings change. Go to the firefox menu and go to Developer->Inspector and hover over the divs.</p>
+		<p>This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.This is where my blog would be. This is where my blog would be. This is where my blog would be. This is where my blog would be.</p>
 	</div>
 	
 </div>
